dashboard/gke-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/client-body-buffer-size: 250M
  labels:
    app: kubeless-dashfn
  name: dashfn
  namespace: dictybase
spec:
  rules:
    - host: betafunc.dictybase.org
      http:
        paths:
          - backend:
              serviceName: dashfn
              servicePort: 8080
            path: /dashboard/(.*)
  tls:
    - hosts:
        - betafunc.dictybase.org
      secretName: dictybeta-staging-org-tls
